@@ -310,3 +310,7 @@ Tue Aug 13 22:47:45 2002                        Michael Jennings (mej)
 
 Oops, disable those old functions for now.
 ----------------------------------------------------------------------
+Mon Aug 19 21:02:56 2002                        Michael Jennings (mej)
+
+Added a macro to permit client apps a simple way to detect libast.
+----------------------------------------------------------------------
